2010-12-07   D. V. Wiebe <getdata@ketiltrout.net>   svn:494
	MSVC fixes from Peter:

	* test/*.c: Remove unistd.h include.  (It will be included in internal.h
	when needed.)

	* src/flush.c: No need to make the GD_VERS_* macros long longs.

	* src/putdata.c (_GD_DoConstOut): Cast to char* before performing pointer
	arithmetic.

	* src/mod.c (_gd_max): Renamed from max for better encapsulation.

	* src/internal.h: Conditionalise inclusion of non-ANSI unistd.h and stdint.h.
	Various _MSC_VER specific code.  Also, define gd_stat64 and gd_stat64_t to
	plausibly useful things by default.o
	
	* src/getdata.h.in: Remove unistd.h. Add math.h and some _MSC_VER specific
	code.  (There are still unresolved MSVC issues with this file.)

	* bindings/cxx/*.cpp: Fix constructor inhertiance.

	* configure.ac: Check for unistd.h and stdint.h.

2010-12-06   D. V. Wiebe <getdata@ketiltrout.net>   svn:493
	GetData-0.7.1 released.

2010-11-30   D. V. Wiebe <getdata@ketiltrout.net>   svn:488
	GetData-0.7.1rc1:

	* src/del.c (gd_delete): Fix order of tests to avoid accessing out-of-bounds
	memory.
	* src/parse.c (_GD_ParseDirective): Don't update the version list if
	_GD_Include failed.
	* src/common.c (_GD_GetRepr): Don't attempt to find a representation suffix
	on field codes which are too short to contain them.
	* src/add.c (_GD_Add): Zero memory allocated for a CARRAY or CONST so
	behaviour is deterministic when creating these fields via gd_[m]add().

2010-11-28   D. V. Wiebe <getdata@ketiltrout.net>   svn:487
	* src/ test/ bindings/: Separate declarations from statements;

	* src/common.c (_GD_SetTablePath): Don't use fixed length buffers.

2010-11-27   D. V. Wiebe <getdata@ketiltrout.net>   svn:486
	* bindings/cxx/test/big_test.cpp: Delete stuff.

2010-11-27   D. V. Wiebe <getdata@ketiltrout.net>   svn:485
	* test/alter_polynom_coeff.c test/include_ignore.c test/alter_entry.c
	test/entry_linterp.c test/entry_multiply.c test/move_data_enc_ar.c