@@ -15,6 +15,9 @@
 
 int main(void)
 {
+#ifndef TEST_GZIP
+  return 77;
+#else
   const char* filedir = __TEST__ "dirfile";
   const char* format = __TEST__ "dirfile/format";
   const char* data = __TEST__ "dirfile/data";
@@ -71,4 +74,5 @@ int main(void)
 #endif
 
   return r;
+#endif
 }
